--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "react-native-ntp-sync",
-  "version": "1.0.4",
+  "name": "@luneo7/react-native-ntp-sync",
+  "version": "1.0.0",
   "description": "Sync time using NTP servers",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "lint": "eslint ."
+    "build": "tsc",
+    "link": "npm run build && cd dist && npm link"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/incrementing/react-native-ntp-sync.git"
+    "url": "git+https://github.com/luneo7/react-native-ntp-sync.git"
   },
   "keywords": [
     "react-native",
@@ -21,18 +23,19 @@
     "time",
     "date"
   ],
-  "author": "Gian <hello@gian.sh> (https://gian.sh/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/incrementing/react-native-ntp-sync/issues"
+    "url": "https://github.com/luneo7/react-native-ntp-sync/issues"
   },
-  "homepage": "https://github.com/incrementing/react-native-ntp-sync#readme",
+  "homepage": "https://github.com/luneo7/react-native-ntp-sync#readme",
   "dependencies": {
     "buffer": "^5.6.0",
-    "react-native-background-timer": "^2.4.1",
     "react-native-udp": "^4.0.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "@types/events": "^3.0.0",
+    "@types/react-native": "^0.63.50",
+    "events": "^3.2.0",
+    "typescript": "^4.1.5"
   }
 }
