--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
-    "compilerOptions": {
-      "module": "es2015",
-      "target": "es2015",
-      "declaration": true,
-      "moduleResolution": "node",
-      "outDir": "./dist",
-      "typeRoots": ["@types/events"]
-    },
-    "include": [
-      "src/**/*"
-    ]
-  }
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2015",
+    "declaration": true,
+    "jsx": "react",     
+    "strict": true, 
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "outDir": "./dist",
+  },
+  "include": [
+    "src/**/*"
+  ]
+}
