--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "semi": true,
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "useTabs": false,
-  "jsxSingleQuote": true,
-  "jsxBracketSameLine": true,
-  "arrowParens": "avoid"
+  "semi": true,
+  "singleQuote": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "printWidth": 80
 }
