--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "@luneo7/react-native-ntp-sync",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sync time using NTP servers",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "build": "tsc",
     "link": "npm run build && cd dist && npm link"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luneo7/react-native-ntp-sync.git"
+    "url": "https://github.com/luneo7/react-native-ntp-sync.git"
   },
   "keywords": [
     "react-native",
@@ -30,12 +33,19 @@
   "homepage": "https://github.com/luneo7/react-native-ntp-sync#readme",
   "dependencies": {
     "buffer": "^5.6.0",
-    "react-native-udp": "^4.0.3"
+    "react-native-udp": "^4.1.2"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/react-native": "^0.63.50",
-    "events": "^3.2.0",
+    "events": "^3.1.0",
+    "husky": "^5.1.3",
+    "pretty-quick": "^3.1.0",
     "typescript": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
